1.1.0 (2024-11-28)

 * Ported eizoctltray to macOS as well


1.0.0 (2024-11-26)

 * Initial release
